<resources>
    <string name="app_name">UserManagementApp_HW6</string>
    <string name="user_management_app">User Management App</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="active_users_0">Active Users: 0</string>
    <string name="deleted_users_0">Deleted Users: 0</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
</resources>